feat: refactor module package

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,7 +42,7 @@ def supportsNamespace() {
 
 android {
   if (supportsNamespace()) {
-    namespace "com.datalogicintegration"
+    namespace "eu.aiden.datalogicintegration"
 
     sourceSets {
       main {
@@ -82,7 +82,7 @@ repositories {
 def kotlin_version = getExtOrDefault("kotlinVersion")
 
 dependencies {
-  implementation "com.facebook.react:react-android"
+  implementation "com.facebook.react:react-android:0.77"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
