feat: scan event

--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
         "error",
         {
           "quoteProps": "consistent",
+          "printWidth": 120,
           "singleQuote": true,
           "tabWidth": 2,
           "trailingComma": "es5",
