--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   "license": "MIT",
   "homepage": "https://github.com/itvisors/react-native-datalogic-integration#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
