--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-datalogic-integration",
+  "name": "@aidenlowcode/react-native-datalogic-integration",
   "version": "1.0.0",
   "description": "React Native DataLogic Integration",
   "source": "./src/index.tsx",
